--- a/main.css
+++ b/main.css
@@ -214,7 +214,7 @@ button#activate.pushed {
 }
 
 div#panel:before {
-	content: "Do you love KANE";
+	content: "Do you love me";
 	top: 3vmin;
 	position: relative;
 	font-size: 8vmin;
